--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,10 @@ pydantic = "^2.7.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.2.2"
 
-[tool.setuptools.dynamic]
-version = {attr = "epoch_toolkit.__version__"}
-
 [build-system]
-requires = ["setuptools", "wheel", "numpy", "poetry-core"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
-
+[tool.poetry.scripts]
+post-install = "post_install:post_install"
 
